fix color shifting order

--- a/src/sass/base/_slider.scss
+++ b/src/sass/base/_slider.scss
@@ -144,7 +144,7 @@ body{
 
 	&.faded {
 		overflow: visible;
-		opacity: .3;
+		opacity: .1;
 	}
 
   &__list{
